2004-12-17  Derek Atkins  <derek@ihtfp.com>

	Rich Johnson's patch to include private structures in the doxygen docs
	* src/doc/doxygen.cfg.in:
	  extract local classes = yes
	  don't exclude *P.h

2004-12-05  Derek Atkins  <derek@ihtfp.com>

	* src/engine/test/test-book-merge.c: targetEnt is always NULL
	  during MERGE_NEW so don't test it in that case.

2004-12-04  Derek Atkins  <derek@ihtfp.com>

	* src/backend/file/Makefile.am:
	* src/backend/file/test/Makefile.am:
	* src/business/business-core/file/Makefile.am:
	  Need to include GNOME_XML_CFLAGS to make sure the libxml includes
	  are found during the compile.  Fixes #121026.

	* src/gnome/glade/register.glade:
	  Increase "number" spin box to a maximum of 1billion.  Fixes #152772.

	* src/business/business-core/gncInvoice.c:
	  send an event when a payment is processed so the invoice gets
	  updated as "paid" in the search window.
	  Fixes #139092.

	* src/business/business-gnome/dialog-vendor.c:
	  Make sure we set the proper search-type when we create the
	  query, otherwise the search will fail later.
	  Fixes #141526.

	* src/engine/test/test-numeric.c:
	  Make sure we use gint64 instead of gint when trying to test
	  values > 2^32.

2004-12-02  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-ledger/Makefile.am: add explicit
	  dependency on business-utils.

	* src/engine/gnc-trace.c: Try a few different filenames for
	  the trace log and if all else fails fall back to stderr.

2004-11-27  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/import-backend.c
	(gnc_import_find_split_matches): Improve importer performance by
	matching imported transactions only against transactions in the
	proper time interval.

2004-11-22  Christian Stimming  <stimming@tuhh.de>

	* configure.in, README: Add configure check for libofx version
	0.7.0 and respective error message. Update docs. Fixes #159050

2004-11-13  Christian Stimming  <stimming@tuhh.de>

	* src/report/report-gnome/window-report.c,